# hospedaje_FR

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Evaluacion.cpp  Evaluacion.h  Hogar.cpp  Hogar.h  Huesped.cpp  Huesped.h  Main.cpp  Propietario.cpp  Propietario.h  Reserva.cpp  Reserva.h  Sistema.cpp  Sistema.h
test/: TestBase.cpp
